[gd_scene load_steps=7 format=2]

[ext_resource path="res://player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://fx.wav" type="AudioStream" id=3]
[ext_resource path="res://Bala.tscn" type="PackedScene" id=4]
[ext_resource path="res://moneda.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.4386, 12.9784 )

[node name="Player" type="Area2D"]
collision_layer = 16
collision_mask = 9
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Bala = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.7, 0.7 )
editor_draw_limits = true

[node name="Disparo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Coin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Pos" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Pos" to="." method="_on_Pos_timeout"]
